--- a/src/css/App.css
+++ b/src/css/App.css
@@ -1,39 +1,87 @@
-.App {
-  text-align: center;
-}
+@import url('https://fonts.googleapis.com/css2?family=Mountains+of+Christmas&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Elsie&family=Mountains+of+Christmas&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Elsie&family=Milonga&family=Mountains+of+Christmas&display=swap');
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+ul {
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  list-style: none;
+}
+.header {
+  margin-top: 5%;
+}
+.mealslist-heading li,
+.mealslist-heading select {
+  padding-right: 10px;
+  margin-right: 50px;
+  width: 59px;
+  height: 16px;
+  font-family: 'Milonga', cursive;
+  font-size: 13px;
+  font-weight: normal;
+  font-stretch: normal;
+  font-style: normal;
+  line-height: normal;
+  letter-spacing: 1.9px;
+  color: #121212;
+  cursor: pointer;
 }
 
-.App-link {
-  color: #61dafb;
+.mealslist-heading select {
+  width: 140px;
+  padding-left: 3px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-
-  to {
-    transform: rotate(360deg);
-  }
+.mealslist-heading li:first-child {
+  width: 250px;
+  height: 37px;
+  font-family: 'Mountains of Christmas', cursive;
+  font-size: 30px;
+  font-weight: bold;
+  font-stretch: normal;
+  font-style: normal;
+  line-height: normal;
+  letter-spacing: normal;
+  color: #008000;
+  padding-top: 0;
 }
+
+.header {
+  display: flex;
+  justify-content: space-between;
+  padding-right: 100px;
+  padding-left: 60px;
+  border-bottom: 1px solid #e8e8e8;
+  padding-bottom: 18px;
+  background-color: #fff;
+}
+
+.content {
+  background-color: #faf8f8;
+  margin-top: -35px;
+}
+
+
+button {
+  width: 160px;
+  height: 18px;
+  font-family: 'Elsie', cursive;
+  font-size: 13px;
+  font-weight: 300;
+  font-stretch: normal;
+  font-style: normal;
+  line-height: normal;
+  letter-spacing: 0.5px;
+  text-align: center;
+  color: #fff; 
+  height: 33px;
+  margin-left: -80px;
+  margin-right: 190px;
+  padding: 7px 19px 8px 22px;
+  border-radius: 3px;
+  background-color: #2d2013;
+  border: #2d2013;
+}
+
+
+
+
