--- a/src/css/MealsDetails.css
+++ b/src/css/MealsDetails.css
@@ -1,3 +1,7 @@
+@import url('https://fonts.googleapis.com/css2?family=Mountains+of+Christmas&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Elsie&family=Mountains+of+Christmas&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Elsie&family=Milonga&family=Mountains+of+Christmas&display=swap');
+
 .meal-row {
   height: 170px;
   padding: 32px 119px 26px 27px;
@@ -16,7 +20,7 @@
   height: 18px;
   margin: 0 39px 0 0;
   opacity: 0.5;
-  font-family: 'Montserrat', sans-serif;
+  font-family: 'Milonga', cursive;
   font-size: 14px;
   font-weight: bold;
   font-stretch: normal;
@@ -30,7 +34,7 @@
   width: 197px;
   height: 29px;
   margin: 3px 323px 0 0;
-  font-family: 'Roboto Slab', serif;
+  font-family: 'Elsie', cursive; 
   font-size: 22px;
   font-weight: bold;
   font-stretch: normal;
