--- a/src/css/ListByAlphabet.css
+++ b/src/css/ListByAlphabet.css
@@ -5,8 +5,9 @@ h2 {
 }
 
 .list-by-alphabet {
+  background-color: #d57d1f;
   margin: 10%;
-  border: 1px solid;
+  border: 3px solid #2d2013;
   padding: 5%;
 }
 
