--- a/src/css/Meal.css
+++ b/src/css/Meal.css
@@ -12,7 +12,7 @@
   margin-left: 100px;
   border-radius: 4px;
   border: solid 1px #e8e8e8;
-  background-color: #fff;
+  background-color: #d57d1f;
 }
 
 .category {
@@ -73,6 +73,7 @@ button.details {
 .image-area {
   height: 150px;
   width: 150px;
+  border: solid 3px #2d2013;
 }
 
 a {
