--- a/src/css/App.css
+++ b/src/css/App.css
@@ -42,7 +42,8 @@ ul {
   line-height: normal;
   letter-spacing: normal;
   color: #008000;
-  padding-top: 0;
+  padding: 2px;
+  margin: 0;
 }
 
 .header {
@@ -54,6 +55,7 @@ ul {
   border-bottom: 1px solid #e8e8e8;
   padding-bottom: 18px;
   background-color: #d57d1f;
+  z-index: 100000;
 }
 
 .content {
@@ -61,7 +63,7 @@ ul {
   margin-top: -35px;
 }
 
-button {
+.header button {
   width: 160px;
   font-family: 'Elsie', cursive;
   font-size: 13px;
@@ -73,11 +75,10 @@ button {
   text-align: center;
   color: #fff;
   height: 33px;
-  margin-left: -80px;
   margin-right: 190px;
-  padding: 7px 19px 8px 22px;
   border-radius: 3px;
   background-color: #2d2013;
-  border: #2d2013;
   cursor: pointer;
+  border: 1px solid #555;
+  padding: 3px;
 }
