--- a/src/css/Meal.css
+++ b/src/css/Meal.css
@@ -44,27 +44,6 @@
   color: #121212;
 }
 
-button.hide,
-button.details {
-  font-family: 'Elsie', cursive;
-  font-size: 13px;
-  font-weight: 300;
-  font-stretch: normal;
-  font-style: normal;
-  line-height: normal;
-  letter-spacing: 0.5px;
-  text-align: center;
-  color: #fff;
-  width: 184px;
-  height: 33px;
-  margin: 12px 0 9px 59px;
-  padding: 7px 19px 8px 22px;
-  border-radius: 3px;
-  background-color: #2d2013;
-  border: #2d2013;
-  cursor: pointer;
-}
-
 .title-category,
 .image-area .right {
   width: 250px;
@@ -91,4 +70,41 @@ a {
   line-height: normal;
   letter-spacing: normal;
   color: #121212;
+}
+
+.meal-row button {
+  font-family: 'Elsie', cursive;
+  font-size: 13px;
+  font-weight: 300;
+  font-stretch: normal;
+  font-style: normal;
+  line-height: normal;
+  letter-spacing: 0.5px;
+  text-align: center;
+  color: #fff;
+  width: 160px;
+  height: 33px;
+  margin: 12px 0 9px 59px;
+  border-radius: 3px;
+  background-color: #2d2013;
+  border: #2d2013;
+  cursor: pointer;
+  padding: 1px;
+  border-right: 1px solid #8b8b8b;
+  border-left: 1px solid #fff;
+  border-bottom: 1px solid #fff;
+}
+
+.meal-row button:hover {
+  border: 2px outset #def;
+  color: #121212;
+  background-color: #f8f8f8 !important;
+}
+
+.hidden {
+  visibility: hidden;
+}
+
+.highlighted {
+  background-color: yellow;
 }
