--- a/src/css/App.css
+++ b/src/css/App.css
@@ -2,6 +2,37 @@
 @import url('https://fonts.googleapis.com/css2?family=Elsie&family=Mountains+of+Christmas&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Elsie&family=Milonga&family=Mountains+of+Christmas&display=swap');
 
+html {
+  box-sizing: border-box;
+}
+
+*,
+*::before,
+*::after {
+  box-sizing: inherit;
+}
+
+* {
+  border: 0 none;
+  list-style: none outside none;
+  margin: 0;
+  outline: 0 none;
+  padding: 0;
+}
+
+body {
+  padding: 0;
+  margin: 0 auto;
+  height: 100%;
+  width: 100%;
+  font-size: 16px;
+  line-height: 20px;
+  color: #333;
+  overflow-x: hidden;
+  font-family: Arial, Helvetica, sans-serif;
+  position: relative;
+}
+
 ul {
   display: flex;
   list-style: none;
@@ -10,9 +41,9 @@ ul {
 .mealslist-heading li,
 .mealslist-heading select {
   padding-right: 10px;
-  margin-right: 50px;
+  /* margin-right: 50px; */
   width: 59px;
-  height: 16px;
+  height: 36px;
   font-family: 'Milonga', cursive;
   font-size: 13px;
   font-weight: normal;
@@ -22,13 +53,16 @@ ul {
   letter-spacing: 1.9px;
   color: #121212;
   cursor: pointer;
+  /* padding: 5px; */
+  
 }
 
 .mealslist-heading select {
   width: 140px;
-  padding-left: 3px;
+  /* padding-left: 3px; */
   font-weight: bold;
   background-color: #d57d1f;
+  
 }
 
 .mealslist-heading li:first-child {
@@ -46,7 +80,7 @@ ul {
   margin: 0;
 }
 
-.header {
+/* .header {
   margin-top: 5%;
   display: flex;
   justify-content: space-between;
@@ -56,14 +90,32 @@ ul {
   padding-bottom: 18px;
   background-color: #d57d1f;
   z-index: 100000;
+  height: 86px;
+} */
+
+
+ul {
+  /* margin-top: 5%; */
+  /* display: flex; */
+  justify-content: space-between;
+  padding-right: 100px;
+  padding-left: 60px;
+  border-bottom: 1px solid #e8e8e8;
+  padding-bottom: 18px;
+  /* background-color: #d57d1f; */
+  z-index: 100000;
+  height: 130px;
 }
+
+
 
 .content {
   background-color: #000;
-  margin-top: -35px;
+  padding-top: 45px;
 }
 
-.header button {
+
+.content button {
   width: 160px;
   font-family: 'Elsie', cursive;
   font-size: 13px;
@@ -82,3 +134,14 @@ ul {
   border: 1px solid #555;
   padding: 3px;
 }
+
+@media (max-width: 825px) {
+  ul {
+    display: block;
+  }
+
+  ul li{
+    margin-top: 15px;
+  }
+  
+ }
