--- a/src/css/MealsDetails.css
+++ b/src/css/MealsDetails.css
@@ -36,12 +36,10 @@
   margin-top: 20px;
   border-radius: 3px;
   background-color: #2d2013;
-  border: #2d2013;
+  border: 1px solid #fff;;
   cursor: pointer;
   padding: 1px;
   border-right: 1px solid #8b8b8b;
-  border-left: 1px solid #fff;
-  border-bottom: 1px solid #fff;
 }
 
 .details-pg {
