A few minor changes
- Modify package json commands
- Styling

issue #12

--- a/src/css/MealsDetails.css
+++ b/src/css/MealsDetails.css
@@ -66,11 +66,12 @@
 
 .title-categ {
   flex-grow: 1;
-  flex-basis: 100%;
+  padding: 2%;
 }
 
 .ingredients {
   flex-grow: 2;
+  padding: 2%;
 }
 
 .titl {
